Proof that every vector space has a basis using Zorn's Lemma

--- a/Analysis.tex
+++ b/Analysis.tex
@@ -805,7 +805,15 @@
 		}
 	}
 
+
+
+
+% -------------------
+
+
 	\pagebreak
+	\searchableSection{Continuity}{analysis}
+	
 	\searchableSubsection{Continuity}{analysis}{\bigskip
 		\boxeddefinition{
 			A function $ f $ is \textbf{continuous at a point ${\bm{ a }}$} if
