--- a/Differentiation.tex
+++ b/Differentiation.tex
@@ -217,10 +217,15 @@
 			&= (\ln{a})a^x &\sidecomment{by \autoref{prop:exp-x-is-inverse-of-ln}.} \qedhere\\[8pt]
 			\end{align*}
 		\end{proof}
-		
+	
+	
+		\bigskip
+		\subsubsection{Problems with this approach to Differentiation}
+		\bigskip
+		We can describe polynomial functions as finite vectors defined against the basis of monomials ($1,x,x^2,\dots$) but to describe transcendental functions such as $e^x$ in the same manner we would need an infinite linear combination of monomials which cannot be generally defined to create a vector space of such vectors.
 	}
 
-
+	
 
 % ------------
 
