--- a/MathsNotesBase.tex
+++ b/MathsNotesBase.tex
@@ -153,6 +153,7 @@
 \newtheorem{axiom}{Axiom}
 \newtheorem{corollary}{Corollary}
 \newtheorem{lemma}{Lemma}
+\newtheorem{claim}{Claim}
 
 \newcommand{\labeledProposition}[2]{
 	\begin{proposition}
