--- a/Pure Mathematics.tex
+++ b/Pure Mathematics.tex
@@ -7,10 +7,14 @@
 	\sloppy
 	\maketitle
 	
+	\chapter{Fundamentals}\biggerskip
+	\subfile{Axioms}
+	\newpage
 	\subfile{"Number Theory"}
 	\newpage
 	
-	\subfile{"Algebra"}
+	\searchableChapter{Algebra}{abstract algebra, complex numbers}\biggerskip
+	\subfile{"Abstract Algebra"}
 	\newpage
 	
 	\subfile{"Matrices"}
